# BuildRunner3

./: .env.example  .gitignore  AGENTS.md  BUILD_3.2_COMPLETE.md  BUILD_COMPLETION_v3.1.0.md  BUILD_MONITOR_READY_FOR_BR3.md  BUILD_PLAN_V3.1-V3.4_ATOMIC.md  CHANGELOG.md  CLAUDE.md  E2E_TESTS_COMPLETE.md  FEATURE_4_IMPLEMENTATION_SUMMARY.md  FEATURE_6_7_IMPLEMENTATION_SUMMARY.md  FIRST_BUILD.md  GAP_ANALYSIS.md  LICENSE  PARALLEL.md  PROJECT_SPEC.md  QUICKSTART.md  README.md  RLS_CRITICAL_CORRECTIONS.md  ROUTING.md  SECURITY.md  SYNAPSE_INTEGRATION_COMPLETE.md  TELEMETRY.md  WEBSOCKET_VERIFICATION.md  WEB_UI_QUICKSTART.md  coverage.json  mypy.ini  package.json  playwright.config.ts  pyproject.toml  requirements-api.txt  rollback-test.md  ui_terminal.py
.dispatch-worktrees/test-dispatch-1775529867/: .gitignore  BUILD_PRD_INTERACTIVE_PLAN.md  Dockerfile.playwright  GEO-PROFESSIONAL-SERVICES-RESEARCH.md  PROJECT_SPEC_COMPLETION.md  RELEASE_NOTES_v3.1.0.md  WEB_UI_IMPLEMENTATION.md  clog  otel-collector-config.yaml  package-lock.json  package.json  pyproject.toml
.dispatch-worktrees/test-dispatch-1775529867/.buildrunner/builds/: BUILD_1B_DESIGN_SYSTEM.md  BUILD_PLAYWRIGHT_INTEGRATION.md  BUILD_cluster-build-orchestration.md  BUILD_cluster-infrastructure.md  BUILD_hunt-sourcer-live.md  BUILD_intel-deals-dashboard.md  BUILD_setlist.md  BUILD_supalog.md
.dispatch-worktrees/test-dispatch-1775529867/.playwright-mcp/: page-2026-03-31T01-18-05-122Z.yml  page-2026-03-31T01-51-52-384Z.yml  page-2026-03-31T03-05-21-542Z.yml  page-2026-04-05T18-07-46-808Z.yml  page-2026-04-07T00-34-00-155Z.yml  page-2026-04-07T00-42-07-501Z.yml  page-2026-04-07T00-45-26-031Z.yml  page-2026-04-07T00-52-28-528Z.yml  page-2026-04-07T00-58-55-419Z.yml  page-2026-04-07T02-04-40-457Z.yml  page-2026-04-07T02-04-47-846Z.yml  page-2026-04-07T02-07-46-522Z.yml  page-2026-04-07T02-07-50-695Z.yml
.dispatch-worktrees/test-dispatch-1775529867/cli/: migrate.py
.dispatch-worktrees/test-dispatch-1775529867/core/: prompt_builder.py
.dispatch-worktrees/test-dispatch-1775529867/core/cluster/: node_analysis.py  node_intelligence.py
.dispatch-worktrees/test-dispatch-1775529867/core/cluster/hunt_sources/: __init__.py
.dispatch-worktrees/test-dispatch-1775529867/core/cluster/scripts/: intel-collect.md
.dispatch-worktrees/test-dispatch-1775529867/core/design_system/: profile_loader.py
.dispatch-worktrees/test-dispatch-1775529867/core/github/: push_intelligence.py
.dispatch-worktrees/test-dispatch-1775529867/core/migration/: git_handler.py
.dispatch-worktrees/test-dispatch-1775529867/core/parallel/: worker_coordinator.py
.dispatch-worktrees/test-dispatch-1775529867/core/persistence/: models.py
.dispatch-worktrees/test-dispatch-1775529867/core/security/: __init__.py
.dispatch-worktrees/test-dispatch-1775529867/docs/: INDUSTRY_PROFILES.md  MCP_INTEGRATION.md
.dispatch-worktrees/test-dispatch-1775529867/docs/examples/: governance-strict.yaml
.dispatch-worktrees/test-dispatch-1775529867/docs/tutorials/: PARALLEL_BUILDS.md
.dispatch-worktrees/test-dispatch-1775529867/templates/industries/: daycare-center.yaml  handyman-services.yaml  home-health-care.yaml  large-animal-veterinary.yaml  nutrition-coaching.yaml
.dispatch-worktrees/test-dispatch-1775529867/templates/tech_stacks/: react-fastapi-postgres.yaml
.dispatch-worktrees/test-dispatch-1775529867/tests/: test_cli.py  test_metrics_db.py  test_migration.py  test_synapse_integration.py
.dispatch-worktrees/test-dispatch-1775529867/tests/e2e/pages/: LoginPage.ts
.dispatch-worktrees/test-dispatch-1775529867/tests/e2e/visual/: analytics.visual.spec.ts  dashboard.visual.spec.ts
.dispatch-worktrees/test-dispatch-1775529867/tests/integration/: full_chain.test.sh
.dispatch-worktrees/test-dispatch-1775529867/tests/unit/api/: test_prd_sync.py
.dispatch-worktrees/test-dispatch-1775529867/ui/: tailwind.config.js
.dispatch-worktrees/test-dispatch-1775529867/ui/src/: globals.css
.dispatch-worktrees/test-dispatch-1775529867/ui/src/components/: Dashboard.test.tsx  Dashboard.tsx  Notifications.css  PRDChatInterface.tsx  PRDEditor.tsx  ProjectInitModal.tsx  (+1 more)
(+2883 files in other folders)
