[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buildrunner"
version = "3.1.0"
description = "Git-backed governance system for AI-assisted project development with feature tracking, MCP integration, and AI-native workflow"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "BuildRunner Team"}
]
keywords = ["build", "runner", "governance", "ai", "project-management", "mcp", "claude"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.20.0",
    "click>=8.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "GitPython>=3.1.0",
    "supabase>=2.0.0",
    "PyGithub>=2.0.0",
    "notion-client>=2.0.0",
    "httpx>=0.24.0",
    "watchdog>=3.0.0",
    "anthropic>=0.18.0",
    "pyperclip>=1.8.0",
    "filelock>=3.12.0",
    "psutil>=5.9.0",
    "aiofiles>=23.0.0",
    "PyJWT>=2.8.0",
    # OpenTelemetry for monitoring and tracing
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-requests>=0.41b0",
    "opentelemetry-instrumentation-logging>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
br = "cli.main:cli"

[tool.setuptools.packages.find]
include = ["cli*", "core*", "api*", "hooks*", "plugins*", "templates*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
